force-apps/deploy/main/default/objects/Contact/fields/Career__c.field-meta.xml
<CustomField>
    <fullName>Career__c</fullName>
    <label>Career</label>
    <length>255</length>
    <type>Text</type>
</CustomField>