force-apps/deploy/main/default/objects/Contact/fields/Resume_Summary__c.field-meta.xml
<CustomField>
    <fullName>Resume_Summary__c</fullName>
    <label>Resume Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>