force-apps/deploy/main/default/objects/Contact/fields/Study_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Study_End_Date__c</fullName>
    <label>Study End Date</label>
    <type>Date</type>
</CustomField>