force-apps/deploy/main/default/objects/Contact/fields/Study_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Study_Start_Date__c</fullName>
    <label>Study Start Date</label>
    <type>Date</type>
</CustomField>