force-apps/deploy/main/default/objects/Contact/fields/Study_Status__c.field-meta.xml
<CustomField>
    <fullName>Study_Status__c</fullName>
    <label>Study Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Finished</fullName>
            </value>
            <value>
                <fullName>In Course</fullName>
            </value>
            <value>
                <fullName>Not Finished</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>